--- a/Assignment1/css/main.css
+++ b/Assignment1/css/main.css
@@ -9,19 +9,17 @@ html {
 } /*16px*/
 :root {
   /* colors */
-  --primary-200: #ebb670;
-  --primary-500: #884e00;
-  --primary-700: #4a3924;
+  --primary-1: #ebb670;
+  --primary-2: #884e00;
+  --primary-3: #4a3924;
   /* grey */
-  --grey-200: #e2e8f0;
-  --grey-300: #cbd5e1;
-  --grey-400: #94a3b8;
-  --grey-500: #64748b;
-  --grey-600: #475569;
-  --grey-700: #334155;
-  --grey-900: #0f172a;
+  --grey-1: #e2e8f0;
+  --grey-2: #cbd5e1;
+  --grey-3: #94a3b8;
+  --grey-4: #475569;
+  --grey-5: #334155;
+  --grey-6: #0f172a;
   /* rest of the colors */
-  --black: #222;
   --white: #fff;
   --red-light: #f8d7da;
   --red-dark: #842029;
@@ -29,11 +27,11 @@ html {
   --green-dark: #0f5132;
   /* fonts  */
   --headingFont: 'Roboto', sans-serif;
-  --bodyFont: 'Nunito', sans-serif;
+  --bodyFont: 'Courier New', sans-serif;
   --smallText: 0.7em;
   /* rest of the vars */
   --backgroundColor: var(--white);
-  --textColor: var(--grey-900);
+  --textColor: var(--grey-6);
   --borderRadius: 0.25rem;
   --letterSpacing: 1px;
   --transition: 0.3s ease-in-out all;
@@ -80,7 +78,7 @@ a {
 .btn {
   cursor: pointer;
   color: var(--white);
-  background: var(--primary-500);
+  background: var(--primary-2);
   border: transparent;
   border-radius: var(--borderRadius);
   letter-spacing: var(--letterSpacing);
@@ -91,16 +89,16 @@ a {
   display: inline-block;
 }
 .btn:hover {
-  background: var(--primary-700);
+  background: var(--primary-3);
   box-shadow: var(--shadow);
 }
 .btn-hipster {
-  color: var(--primary-500);
-  background: var(--primary-200);
+  color: var(--primary-2);
+  background: var(--primary-1);
 }
 .btn-hipster:hover {
-  color: var(--primary-200);
-  background: var(--primary-700);
+  color: var(--primary-1);
+  background: var(--primary-3);
 }
 .btn-block {
   width: 100%;
@@ -128,7 +126,7 @@ a {
   padding: 0.375rem 0.75rem;
   border-radius: var(--borderRadius);
   background: var(--backgroundColor);
-  border: 1px solid var(--grey-200);
+  border: 1px solid var(--grey-1);
 }
 .form-row {
   margin-bottom: 1rem;
@@ -138,7 +136,7 @@ a {
 }
 ::placeholder {
   font-family: inherit;
-  color: var(--grey-400);
+  color: var(--grey-3);
 }
 
 /* title */
@@ -190,6 +188,7 @@ a {
   flex-direction: row;
   align-items: center;
   width: 100%;
+  text-decoration-color: var(--primary-3);
 }
 .show-links {
   height: 23.9375rem;
@@ -199,7 +198,7 @@ a {
   text-align: center;
   font-size: 1rem;
   text-transform: capitalize;
-  color: var(--grey-900);
+  color: var(--grey-6);
   letter-spacing: var(--letterSpacing);
   padding: 1rem 0;
   border-top: 1px solid var(--white0);
@@ -208,7 +207,7 @@ a {
   margin-right: 1rem;
 }
 .nav-link:hover {
-  color: var(--primary-500);
+  color: var(--primary-2);
 }
 .contact-link a {
   padding: 0.15rem 1rem;
@@ -234,7 +233,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: var(--black);
+  background: var(--primary-1);
   color: var(--white);
 }
 .page-footer h5 {
@@ -246,7 +245,7 @@ a {
 }
 .page-footer .footer-logo,
 .page-footer a {
-  color: var(--primary-500);
+  color: var(--primary-2);
 }
 
 /* Hero */
@@ -307,7 +306,7 @@ a {
   transition: var(--transition);
 }
 .tags-list a:hover {
-  color: var(--primary-500);
+  color: var(--primary-2);
 }
 .recipe {
   display: block;
@@ -321,7 +320,7 @@ a {
   margin-bottom: 0;
   margin-top: 0.25rem;
   line-height: 1;
-  color: var(--grey-700);
+  color: var(--grey-5);
 }
 .recipe p {
   font-size: 0.85rem;
@@ -378,7 +377,7 @@ a {
   border-radius: var(--borderRadius);
 }
 .recipe-info p {
-  color: var(--grey-600);
+  color: var(--grey-4);
 }
 .recipe-icons {
   display: grid;
@@ -389,12 +388,12 @@ a {
 }
 .recipe-icons i {
   font-size: 1.5rem;
-  color: var(--primary-500);
+  color: var(--primary-2);
 }
 .recipe-icons h5, .recipe-icons p {
   margin-bottom: 0;
   font-size: 0.85em;
-  color: var(--grey-600);
+  color: var(--grey-4);
 }
 .recipe-tags {
   display: flex;
@@ -404,7 +403,7 @@ a {
   font-weight: 600;
 }
 .recipe-tags a {
-  background: var(--primary-500);
+  background: var(--primary-2);
   border-radius: var(--borderRadius);
   color: var(--white);
   padding: 0.05rem 0.5rem;
@@ -426,28 +425,28 @@ a {
 .single-instruction header p {
   text-transform: uppercase;
   font-weight: 600;
-  color: var(--primary-500);
+  color: var(--primary-2);
   margin-bottom: 0;
 }
 .single-instruction > p {
-  color: var(--grey-700);
+  color: var(--grey-5);
 }
 .single-instruction header div {
   height: 2px;
-  background: var(--grey-300);
+  background: var(--grey-2);
 }
 .second-column {
   display: grid;
   row-gap: 2rem;
 }
 .single-ingredient {
-  border-bottom: 2px solid var(--grey-300);
+  border-bottom: 2px solid var(--grey-2);
   padding-bottom: 0.75rem;
-  color: var(--grey-700);
+  color: var(--grey-5);
 }
 .single-tool {
-  border-bottom: 2px solid var(--grey-300);
+  border-bottom: 2px solid var(--grey-2);
   padding-bottom: 0.75rem;
-  color: var(--primary-500);
+  color: var(--primary-2);
   text-transform: capitalize;
 }
