--- a/Assignment6/scss/_experience.scss
+++ b/Assignment6/scss/_experience.scss
@@ -3,10 +3,13 @@
 
 
 // colors
-$primary: #1d8cf8;
-$secondary: #4f537b;
-$success: #00bf9a;
-$danger: #fd5d93;
+$colors: (
+  "primary": #1d8cf8,
+  "secondary": #144646,
+  "success": #00bf9a,
+  "danger": #fd5d93
+);
+
 
 // timeline variables
 $timeline-before-bg : rgb(73, 126, 125);
@@ -58,7 +61,7 @@ p {
             border-radius: 50%;
             text-align: center;
             font-size: 2rem;
-            background: $secondary;
+            background: map-get($colors,"secondary") ;
 
             i {
                 position: absolute;
@@ -95,7 +98,7 @@ p {
                 margin-bottom: 1.4rem;
 
                 .badge {
-                    background: $secondary;
+                    background: map-get($colors,"secondary") ;
                     padding: 4px 8px;
                     border-radius: 3px;
                     font-size: 12px;
@@ -121,7 +124,7 @@ p {
         &.primary {
             .badge,
             .timeline-icon {
-                background: $primary !important;
+                background-color: map-get($colors, "primary") !important;
             }
         }
 
@@ -129,7 +132,7 @@ p {
         &.success {
             .badge,
             .timeline-icon {
-                background: $success !important;
+                background-color: map-get($colors, "success")  !important;
             }
         }
 
@@ -137,7 +140,7 @@ p {
         &.danger {
             .badge,
             .timeline-icon {
-                background: $danger !important;
+                background-color: map-get($colors, "danger")  !important;
             }
         }
 
